[tool.poetry]
name = "types-smorest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
types-flask = "==1.1.6"
marshmallow = "==3.21.0"
apispec = "==5.2.2"
flask = "==3.0.3"
werkzeug = "==2.3.8"
mypy = "==1.2.0"
pipenv-setup = "==3.2.0"
twine = "==4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
