[tool.poetry]
name = "types-smorest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
types-flask = "==1.1.6"
marshmallow = "==3.21.3"
apispec = "==6.6.1"
flask = "==3.0.3"
werkzeug = "==3.0.3"
mypy = "==1.19.1"
twine = "==6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
