[tool.poetry]
name = "types-smorest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
types-flask = "==1.1.6"
marshmallow = "==3.26.2"
apispec = "==6.9.0"
flask = "==3.0.3"
werkzeug = "==3.1.5"
mypy = "==1.19.1"
twine = "==6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
